--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
       - main
       - master
       
+env:
+  S3_BUCKET_NAME: daydream-freelec-springboot2-build
+  PROJECT_NAME: springboot2-webservice
+      
 jobs:
   build:
     runs-on:
@@ -29,3 +33,17 @@ jobs:
       - name: build with gradle
         run: ./gradlew build
         shell: bash
+        
+      - name: make zip file
+        run: zip -r ./$GITHUB_SHA.zip
+        shell: bash
+        
+      - name: configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          
+      - name: upload to S3
+        run: aws s3 cp --region ${{ secrets.AWS_REGION }} ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
