--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app/step2/zip
+    destination: /home/ec2-user/app/step3/zip
     overwrite: yes
 
 permissions:
@@ -12,7 +12,17 @@ permissions:
     group: ec2-user
 
 hooks:
+  AfterInstall:
+    - location: stop.sh # 엔진엑스와 연결되지 않은 스프링부트 종료
+      timeout: 60
+      runas: ec2-user
+
   ApplicationStart:
-    - location: deploy.sh
+    - location: start.sh # 엔진엑스와 연결되지 않은 포트에 스프링 부트 시작
+      timeout: 60
+      runas: ec2-user
+
+  ValidateService:
+    - location: health.sh # Health Check
       timeout: 60
       runas: ec2-user
